# digitalsignature

./: README.md
signaturegenerator/: data.json  main.py  payload.json  private_key.pem  public_key.pem  pyproject.toml
signatureverifier/: pom.xml
signatureverifier/src/main/java/com/example/signatureverifier/: SignatureVerifierApplication.java
signatureverifier/src/main/java/com/example/signatureverifier/controller/: VerificationController.java
signatureverifier/src/main/java/com/example/signatureverifier/model/: SignaturePayload.java
signatureverifier/src/main/java/com/example/signatureverifier/service/: SignatureVerificationService.java
signatureverifier/src/main/resources/: application.properties
signatureverifier/src/test/java/com/example/signatureverifier/: SignatureVerifierApplicationTests.java
