[project]
name = "signaturegenerator"
version = "0.1.0"
description = ""
authors = [
    {name = "Suman Michael",email = "sumanmichael01@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cryptography (>=44.0.2,<45.0.0)",
    "requests (>=2.32.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
